# Agentbuilder

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3248209124e7_initial_schema.py  9a1f2b4c7e10_agent_extras.py
backend/app/: __init__.py  config.py  main.py  scheduler.py
backend/app/api/: agents.py  runs.py  schemas.py  telegram.py  workflows.py
backend/app/channels/: telegram_bot.py
backend/app/db/: models.py  session.py
backend/app/engine/: agents.py  checkpointer.py  executor.py  factory.py  guardrails.py  memory.py  orchestrator.py  routers.py  usage.py
backend/app/engine/tools/: __init__.py  handoff.py  http_fetch.py  web_search.py
backend/app/events/: bus.py
backend/app/scripts/: run_workflow.py
backend/app/templates/: draft_and_critic.json  research_and_write.json  support_triage.json
backend/tests/: test_agents.py  test_api_agents.py  test_executor.py  test_factory.py  test_guardrails.py  test_routers.py  test_telegram_bridge.py  test_usage.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/agents/[id]/: page.tsx
frontend/src/app/telegram/: page.tsx  telegram-link-manager.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/components/agents/: agent-form.tsx
frontend/src/components/workflow/: properties-panel.tsx  workflow-editor.tsx
frontend/src/lib/: api.ts  sse.ts  types.ts
(+7 files in other folders)
