[project]
name = "orchestra-backend"
version = "0.1.0"
description = "AI Agent Orchestration Platform — backend (FastAPI + LangGraph)"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "sse-starlette==2.1.3",
    "httpx==0.28.1",
    "tenacity==9.0.0",

    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "psycopg[binary,pool]==3.2.3",
    "redis==5.2.0",

    "langgraph==1.2.1",
    "langchain==1.3.1",
    "langchain-core==1.4.0",
    "langchain-openai==1.2.2",
    "langgraph-checkpoint-postgres==3.1.0",

    "python-telegram-bot==22.7",

    "ddgs==9.0.0",

    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "respx==0.22.0",
    "anyio==4.7.0",
    "ruff==0.8.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
